--- a/project_1/assets/style/style.scss
+++ b/project_1/assets/style/style.scss
@@ -44,109 +44,110 @@ html {
   text-align: center;
 
 }
+.food {
 
-.menu {
-  display: flex;
-  flex-wrap: wrap;
-  margin: -20px -15px;
-}
-
-.menu__item {
-  width: calc((100% / 3) - 30px);
-  min-width: 300px;
-  margin: 20px 15px;
-}
-
-.card {
-  width: 370px;
-  height: 410px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 21px 28px;
-  padding-top: 0;
-  border-radius: 24px;
-  border: 1.2px solid #efefef;
-  background: #fff;
-  box-sizing: border-box;
-  &__img {
+  .menu {
     display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  &__body {
-    width: 100%;
-  }
-
-  &__rating {
-    height: 22px;
-    img {
-      height: 100%;
+    flex-wrap: wrap;
+    margin: -20px -15px;
+    .card {
+      width: calc((100% / 3) - 30px);
+      min-width: 300px;
+      margin: 20px 15px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 21px 28px;
+      padding-top: 0;
+      border-radius: 24px;
+      border: 1.2px solid #efefef;
+      background: #fff;
+      box-sizing: border-box;
+  
+      &__img {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    
+      &__body {
+        width: 100%;
+      }
+    
+      &__rating {
+        height: 22px;
+  
+        img {
+          height: 100%;
+        }
+      }
+    
+      &__name {
+        margin-top: 10px;
+        margin-bottom: 12px;
+        color: #181818;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 120%;
+        height: 48px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+      }
+    
+      &__description {
+        color: #787878;
+        font-family: Inter;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 162.5%;
+        letter-spacing: -0.16px;
+        height: 52px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+      }
+    
+      &__footer {
+        display: flex;
+        width: 100%;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 17px;
+      }
+    
+      &__price {
+        color: #060606;
+        font-family: Inter;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+      }
+    
+      &__icons {
+        display: flex;
+        gap: 10px;
+        &--like {
+          /* width: 32px;
+                height: 32px; */
+        }
+    
+        &--share {
+          /* width: 32px;
+                height: 32px; */
+        }
+      }
     }
   }
-
-  &__name {
-    margin-top: 10px;
-    margin-bottom: 12px;
-    color: #181818;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 120%;
-    height: 48px;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-  }
-
-  &__description {
-    color: #787878;
-    font-family: Inter;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 162.5%;
-    letter-spacing: -0.16px;
-    height: 52px;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-  }
-
-  &__footer {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 17px;
-  }
-
-  &__price {
-    color: #060606;
-    font-family: Inter;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-  }
-
-  &__icons {
-    display: flex;
-    gap: 10px;
-    &--like {
-      /* width: 32px;
-            height: 32px; */
-    }
-
-    &--share {
-      /* width: 32px;
-            height: 32px; */
-    }
-  }
 }
+
+
+
 
 .see-more__center {
   margin: auto;
@@ -185,6 +186,7 @@ html {
 }
 
 .see-more__red {
+  margin-right: 30px;
   background: linear-gradient(101.98deg, #FF6741 41.25%, #FF4415 98.64%);
   ;
 }
@@ -195,29 +197,43 @@ html {
 
 }
 
-.card__delivery {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  padding-top: 0;
-  border: 1.2px solid #efefef;
-  background: #fff;
-  box-sizing: border-box;
-  &__img {
-    width: 100%;
-  }
-  &__body {
-    width: 100%;
-    margin: auto;
-  }
 
-}
 
 
 .between {
   margin-top: 400px;
+  .menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: -20px -15px;
+
+    .card {
+      width: 368px;
+      height: 464px;
+      margin: 20px 15px;
+      display: flex;
+      flex-direction: column;
+      padding-top: 0;
+      border: 1.2px solid #efefef;
+      background: #fff;
+      box-sizing: border-box;
+      
+      &__img {
+        width: 100%;
+      }
+      &__body {
+        margin : 20px;
+      
+      }
+    }
+  }
 }
 
 .image {
   width: 100%;
+}
+.hungry {
+  margin-top: 400px;
 }
