--- a/project_1/assets/style/style.css
+++ b/project_1/assets/style/style.css
@@ -8,7 +8,7 @@ html {
   margin: auto;
 }
 
-.title__sub {
+.food .container .title__sub {
   color: #ff4415;
   text-align: center;
   font-family: "Seaweed Script", cursive;
@@ -17,8 +17,7 @@ html {
   font-weight: 400;
   line-height: 125%;
 }
-
-.title {
+.food .container .title {
   margin: auto;
   max-width: 590px;
   color: #101010;
@@ -31,20 +30,6 @@ html {
   margin-top: 8px;
   margin-bottom: 50px;
 }
-
-.title__below {
-  width: 100%;
-  height: 56px;
-  top: 200px;
-  left: 494px;
-  font-family: Inter;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 28px;
-  letter-spacing: -0.01em;
-  text-align: center;
-}
-
 .food .menu {
   display: flex;
   flex-wrap: wrap;
@@ -68,6 +53,8 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 200px;
 }
 .food .menu .card__body {
   width: 100%;
@@ -171,6 +158,7 @@ html {
 }
 
 .see-more__red {
+  margin-right: 30px;
   background: linear-gradient(101.98deg, #FF6741 41.25%, #FF4415 98.64%);
 }
 
@@ -203,7 +191,6 @@ html {
   width: 100%;
 }
 .between .menu .card__body {
-  width: 100%;
   margin: 20px;
 }
 
