--- a/project_1/assets/style/style.scss
+++ b/project_1/assets/style/style.scss
@@ -8,44 +8,34 @@ html {
   margin: auto;
 }
 
-.title__sub {
-  color: #ff4415;
-  text-align: center;
-  font-family: "Seaweed Script", cursive;
-  font-size: 40px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 125%;
-}
 
-.title {
-  margin: auto;
-  max-width: 590px;
-  color: #101010;
-  text-align: center;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  font-size: 3.25rem;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 120%;
-  margin-top: 8px;
-  margin-bottom: 50px;
-}
-.title__below {
-  width: 100%;
-  height: 56px;
-  top: 200px;
-  left: 494px;
-  font-family: Inter;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 28px;
-  letter-spacing: -0.01em;
-  text-align: center;
-
-}
 .food {
+  .container {
+    .title__sub {
+      color: #ff4415;
+      text-align: center;
+      font-family: "Seaweed Script", cursive;
+      font-size: 40px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 125%;
+    }
+    .title {
+      margin: auto;
+      max-width: 590px;
+      color: #101010;
+      text-align: center;
+      text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      font-size: 3.25rem;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 120%;
+      margin-top: 8px;
+      margin-bottom: 50px;
+    }
 
+  }
+  
   .menu {
     display: flex;
     flex-wrap: wrap;
@@ -68,6 +58,8 @@ html {
         display: flex;
         justify-content: center;
         align-items: center;
+        width: 100%;
+        height: 200px;
       }
     
       &__body {
@@ -237,3 +229,4 @@ html {
 .hungry {
   margin-top: 400px;
 }
+
