--- a/cv/assets/style/style.scss
+++ b/cv/assets/style/style.scss
@@ -79,23 +79,33 @@ body {
 }
 
   &__user__info {
-    margin: 0 30px 30px 30px;
-    padding: 30px;
+    margin: 30px;
+    padding: 10px 10px 10px 30px;
     border-radius: 16px;
-    background: var(--background-secondary);
     background: #F3F6F6;
 }
 
   &__btn {
-
+    display: inline-flex;
+    margin-bottom: 30px;
+    padding: 1px 30px;
+    border-radius: 10px;
+    background: linear-gradient(94deg, #FA5252 0%, #DD2476 100%);
 }
 
   &__btn__icon {
-
+    width: 22px;
+    height: 22px;
+    margin: 18px 10px 0 0;
 }
 
   &__btn__title {
-
+    color: #FFF;
+    font-family: Poppins;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
 
 }
@@ -115,11 +125,6 @@ body {
 .info  {
     display: flex;
     flex-direction: row;
-    min-width: 240px;
-    margin: auto;
-    margin-bottom: 10px;
-    padding-bottom: 9px;
-    border-bottom: 1px solid var(--color-third);
     
   &__icon {
     display: flex;
@@ -132,19 +137,25 @@ body {
     margin-right: 10px;
     background: var(--white);
     border-radius: 8px;
-    margin: 10px;
+    margin-top : 12px;
     background: white;
 }
 
   &__content {
-
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
   &__content__title {
-
+    margin-bottom: 2px;
+    color: var(--color-secondary);
+    font-size: 0.75rem;
+    line-height: 1.125rem;
 }
   &__content__description {
-
+    text-align: left;
+    margin-top: 2px;
 }
 
 }
@@ -173,6 +184,81 @@ body {
 }
 
 }
+.wrapper  {
+  &__list {
+
+}
+
+}
+.list  {
+  &__left {
+
+
+}
+
+  &__title {
+
+}
+
+  &__title__icon {
+    color: #F95054;
+    font-family: Font Awesome 5 Pro;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+
+  &__title__name {
+    color: #000;
+    font-family: Poppins;
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+}
+
+  &__content__item {
+    display: inline-block;
+    margin-bottom: 20px;
+    padding: 15px 15px 15px 20px;
+    box-sizing: border-box;
+    border-radius: 12px;
+}
+
+  &__content__time {
+
+}
+
+  &__content__location {
+
+}
+
+  &__content__address {
+
+}
+
+  &__right {
+
+}
+
+}
+.bg {
+  &--FFF4F4{
+
+}
+  &--EEF5FA{
+
+}
+  &--FCF4FF{
+
+}
+}
 .list  {
   &__title {
     display: flex;
@@ -183,6 +269,11 @@ body {
     font-size: 1.625rem;
     line-height: 2.4375rem;
 
+}
+  &__content__description {
+    color: #44566C;
+    font-size: 0.925rem;
+    line-height: 1.875rem;
 }
 
   &__title__icon {
