--- a/cv/assets/style/style.css
+++ b/cv/assets/style/style.css
@@ -2,6 +2,10 @@ body {
   background-image: url(../img/bg.jpg);
 }
 
+html {
+  font-family: "Roboto Slab", serif;
+}
+
 .srcollbar {
   margin-top: 240px;
   display: flex;
@@ -154,6 +158,7 @@ body {
 
 .main {
   margin: 184px 0 60px 40px;
+  padding: 0 30px 0 30px;
 }
 
 .wrapper {
@@ -172,6 +177,13 @@ body {
   font-weight: 700;
   font-size: 2.5rem;
   line-height: 3.3125rem;
+}
+
+.article--body__list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 60px;
 }
 
 .list__title__icon {
@@ -201,11 +213,33 @@ body {
   box-sizing: border-box;
   border-radius: 12px;
 }
+.list__content__time {
+  color: #44566C;
+}
+.list__content__location {
+  color: #0F172A;
+}
+.list__content__address {
+  color: #44566C;
+}
+.list__right {
+  margin-left: 30px;
+}
+
+.bg--FFF4F4 {
+  background: #fff4f4;
+}
+.bg--EEF5FA {
+  background: #EEF5FA;
+}
+.bg--FCF4FF {
+  background: #FCF4FF;
+}
+
 .list__title {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-bottom: 20px;
   font-weight: 500;
   font-size: 1.625rem;
   line-height: 2.4375rem;
@@ -250,11 +284,13 @@ body {
 }
 .crossbar__item__icon {
   height: 25px;
+  color: gray;
 }
 .crossbar__item__title {
   margin-top: 7px;
   color: var(--color-secondary);
   font-weight: 500;
   font-size: 0.725rem;
-  line-height: 1.25rem;
+  text-decoration: unset;
+  flex: 1;
 }/*# sourceMappingURL=style.css.map */
