--- a/cv/assets/style/style.scss
+++ b/cv/assets/style/style.scss
@@ -5,7 +5,6 @@ html {
   font-family: "Roboto Slab", serif;
 }
 .srcollbar {
-    margin-top: 240px;
     display: flex;
     
 }
@@ -302,6 +301,7 @@ html {
   right: 0;
   top: 0;
   transition: 0.5s ease-in-out;
+  text-decoration: none;
   &__item {
     display: flex;
     flex-direction: column;
@@ -311,7 +311,7 @@ html {
     height: 84px;
     box-sizing: border-box;
     margin-right: 20px;
-    padding: 17px 22px 15px 22px;
+    padding: 27px 22px 15px 22px;
     border-radius: 12px;
     background:#F3F6F6;
 
@@ -327,8 +327,10 @@ html {
     color: var(--color-secondary);
     font-weight: 500;
     font-size: 0.725rem;
-    text-decoration: unset;
-    flex : 1; 
+    text-decoration: none !important;
+}
+&__item__title:hover {
+  text-decoration: none !important;
 }
 
 }
