--- a/cv/assets/style/responsive.css
+++ b/cv/assets/style/responsive.css
@@ -8,7 +8,7 @@
   
   @media (max-width: 1199.99px) {
     .container {
-      margin: auto 20px;
+      /* margin: auto 20px; */
     }
   
     .page {
