--- a/REACTJS/CODE-reactjs/src/components/buttonGroup/button.css
+++ b/REACTJS/CODE-reactjs/src/components/buttonGroup/button.css
@@ -1,12 +1,24 @@
 .button-c {
-    display: flex;
     width: 330px;
-    padding: 20px 24px;
-    justify-content: space-between;
-    align-items: center;
+    padding-left: 35px;
+    height: 60px;
     border-radius: 20px;
     background: #000;
+    display: flex;
+    align-items: center;
+    /* justify-content: space-between; */
+    align-items: center;
+    gap: 29px;
+    margin-bottom: 20px;
 }
+.btn-light {
+    background-color: white;
+}
+
+.icon {
+
+}
+
 .title {
     color: #FFF;
     font-family: Roboto;
@@ -15,4 +27,8 @@
     font-weight: 600;
     line-height: 20px; /* 117.647% */
     letter-spacing: 0.5px;
+}
+
+.btn-light .title {
+    color: black;
 }
