--- a/REACTJS/CODE-reactjs/src/App.css
+++ b/REACTJS/CODE-reactjs/src/App.css
@@ -1,38 +1,14 @@
+.know-ledge {
+  display: inline-block;
+  margin-right: 12px;
+  margin-bottom: 20px;
+  padding: 5px 20px;
+  border-radius: 8px;
+  background: #EDF2F2;;
+  color: #44566C;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  margin: auto;
+  max-width: 1000px;
 }
