--- a/REACTJS/CODE-reactjs/src/components/from/style.css
+++ b/REACTJS/CODE-reactjs/src/components/from/style.css
@@ -1,5 +1,8 @@
-
-#Ho {
+input {
+    padding-left: 15px;
+    height: 50px;
+    border-radius: 10px;
+    width: 300px;
+    border: solid 1px black;
     margin: 20px;
-    border-radius: 8px;
 }
